--- a/EFCoreSample/appsettings.json
+++ b/EFCoreSample/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-   "sqlConnection": "Data Source=DESKTOP-GEBQQ6K; Initial Catalog = bsStoreAppDb; Integrated Security = true"
+    "sqlConnection": "Data Source=DESKTOP-GEBQQ6K; Initial Catalog = bsStoreAppDb; Integrated Security = true"
+  },
+  "JwtSettings": {
+    "validIssuer": "bsstoreapi",
+    "validAudience": "http://localhost:3000",
+    "secretKey": "fuaterginhassickdiralbum1999",
+    "expires": 60
   }
 }
