--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="automapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.2" />
   </ItemGroup>
 
 </Project>
